k8s/overlays/dev/networkpolicy-baseline.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  labels:
    app.kubernetes.io/name: namespace-baseline
    app.kubernetes.io/instance: mnt
    app.kubernetes.io/component: network-policy
    app.kubernetes.io/part-of: infra-platform
    app.kubernetes.io/managed-by: kustomize
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  labels:
    app.kubernetes.io/name: namespace-baseline
    app.kubernetes.io/instance: mnt
    app.kubernetes.io/component: network-policy
    app.kubernetes.io/part-of: infra-platform
    app.kubernetes.io/managed-by: kustomize
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
